force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/Update_Cost_Price_on_Asset_to_Quoteline__mdt.object-meta.xml
<CustomObject>
    <description>SDT-33285</description>
    <label>Update Cost,Price on Asset to Quoteline</label>
    <pluralLabel>Update Cost,Price on Asset to Quotelines</pluralLabel>
</CustomObject>