force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <type>TextArea</type>
</CustomField>