force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Final_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Final_Frequency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Frequency</label>
    <type>Checkbox</type>
</CustomField>