force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Type__c</fullName>
    <label>Occurrence Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>