force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Pricing_Call__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Call</label>
    <type>Checkbox</type>
</CustomField>