force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Scenarios__c</fullName>
    <label>Scenarios</label>
    <length>30</length>
    <type>Text</type>
</CustomField>