force-app/main/default/objects/Update_Cost_Price_on_Asset_to_Quoteline__mdt/fields/Updated_Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Updated_Occurrence_Type__c</fullName>
    <label>Updated Occurrence Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>